<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="E_CraneMode" Id="{ebd50dd3-a048-455e-85b2-ea5c742f5918}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_CraneMode :
(
	Manual,
	Auto
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>