<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="E_CraneStatus" Id="{281a45d3-2fcd-4a7c-af18-b57fb2dd428f}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_CraneStatus :
(
	Ready,
	Starting,
	Running,
	Faulty
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>