<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_pPistonRange" Id="{a93cbe16-5d88-4be3-9b01-9fce5fbdc079}">
    <Declaration><![CDATA[TYPE ST_pPistonRange :
STRUCT
	fPistonPosMin : LREAL := 0.0;
	fPistonPosMax : LREAL := 0.5;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>