<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="CraneSimulation" Id="{c255987f-7a58-4573-9ac9-545c12e8d4a5}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM CraneSimulation
VAR
	fTime : LREAL; 	
	bRunning : BOOL;
	fPositionAutoMode : LREAL; 
	fInitialPosition : LREAL; 
	fInitialVelocity : LREAL;
	eStatus : E_CraneStatus;
	eMode : E_CraneMode;
	aPistonEndStopMsg : ARRAY [0..2] OF STRING := ['End Stop not active', 'Piston has reached upper End Stop', 'Piston has reached Lower End Stop'];
 	fPressureEng : REAL;
	fFlowEng : REAL;
	fPressureBar : LREAL := 60;
	fFlowLmin : LREAL := 20;
	bPistonMaxNewValue : BOOL;
	fMaxPistonPosition : LREAL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF Inputs.bStartSimulation AND Inputs.bAutoMode  THEN
	fTime := fTime + Parameters.fCyclicTime;
ELSE
	fTime := 0; 	
END_IF

IF fTime > 0 AND Inputs.bAutoMode THEN 
	bRunning := TRUE;
ELSE
	bRunning := FALSE;
END_IF

fPositionAutoMode := Inputs.fCylinderVelocityReference * 1/2*(fTime*fTime) + fInitialVelocity * fTime + fInitialPosition;

// added max/min outout value to avoid to large output for visualization
IF fPositionAutoMode >= Parameters.stPistonRange.fPistonPosMax THEN
	fPositionAutoMode := Parameters.stPistonRange.fPistonPosMax;	
ELSIF fPositionAutoMode <= Parameters.stPistonRange.fPistonPosMin  THEN
	fPositionAutoMode := Parameters.stPistonRange.fPistonPosMin; 
ELSE	
	fPositionAutoMode := fPositionAutoMode;
END_IF

IF Inputs.bAutoMode THEN
	Outputs.fCylinderPosition := fPositionAutoMode;
ELSE
	Outputs.fCylinderPosition := Inputs.fManualCylinderPositionReference;	
END_IF


Outputs.bSimulationRunning := bRunning;  
Outputs.fSimulationTime := fTime; 
Outputs.fCylinderVelocity := Inputs.fCylinderVelocityReference;
Outputs.pt1_y := LREAL_TO_INT(Outputs.fCylinderPosition * Parameters.fPistonScale);

//status
IF inputs.bEnableSimulation THEN
	eStatus := E_CraneStatus.Ready;
ELSE
	eStatus := E_CraneStatus.Faulty;
END_IF

IF inputs.bStartSimulation THEN
	eStatus := E_CraneStatus.Starting;
END_IF

IF Outputs.bSimulationRunning THEN
	eStatus := E_CraneStatus.Running;
END_IF

//mode
IF inputs.bAutoMode THEN
	eMode := E_CraneMode.Auto;
ELSE
	eMode := E_CraneMode.Manual;
END_IF

//Logic for pistonStops
IF Outputs.fCylinderPosition <= Parameters.stPistonRange.fPistonPosMin THEN
	Outputs.bPistonLowerEndStop := TRUE;
	Outputs.bPistonUpperEndStop := FALSE;
	HMI.sPistonEndStopMessages := aPistonEndStopMsg[2];
	
ELSIF Outputs.fCylinderPosition >= Parameters.stPistonRange.fPistonPosMax THEN
	Outputs.bPistonLowerEndStop := FALSE;
	Outputs.bPistonUpperEndStop := TRUE;
	HMI.sPistonEndStopMessages := aPistonEndStopMsg[1];

ELSE
	Outputs.bPistonLowerEndStop := FALSE;
	Outputs.bPistonUpperEndStop := FALSE;
	HMI.sPistonEndStopMessages := aPistonEndStopMsg[0];
END_IF

//unit conversions

fPressureEng := LREAL_TO_REAL (F_BarToEng(fBar := fPressureBar));
fFlowEng := LREAL_TO_REAL (F_LminToEng(fLminFlow := fFlowLmin));

//Piston stroke

F_UpdateParametersByReference(
	bSetNewValue := bPistonMaxNewValue,
	fMaxPistonStroke := fMaxPistonPosition,
	paramCylinderPiston := Parameters.stPistonRange
);
	
	
]]></ST>
    </Implementation>
    <LineIds Name="CraneSimulation">
      <LineId Id="5" Count="1" />
      <LineId Id="20" Count="1" />
      <LineId Id="7" Count="0" />
      <LineId Id="22" Count="1" />
      <LineId Id="25" Count="0" />
      <LineId Id="28" Count="1" />
      <LineId Id="26" Count="0" />
      <LineId Id="37" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="95" Count="0" />
      <LineId Id="87" Count="7" />
      <LineId Id="74" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="75" Count="0" />
      <LineId Id="77" Count="1" />
      <LineId Id="76" Count="0" />
      <LineId Id="168" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="105" Count="0" />
      <LineId Id="104" Count="0" />
      <LineId Id="106" Count="0" />
      <LineId Id="109" Count="0" />
      <LineId Id="112" Count="1" />
      <LineId Id="110" Count="0" />
      <LineId Id="115" Count="0" />
      <LineId Id="114" Count="0" />
      <LineId Id="116" Count="1" />
      <LineId Id="119" Count="0" />
      <LineId Id="118" Count="0" />
      <LineId Id="120" Count="1" />
      <LineId Id="123" Count="0" />
      <LineId Id="122" Count="0" />
      <LineId Id="124" Count="1" />
      <LineId Id="127" Count="1" />
      <LineId Id="126" Count="0" />
      <LineId Id="140" Count="0" />
      <LineId Id="139" Count="0" />
      <LineId Id="141" Count="1" />
      <LineId Id="145" Count="0" />
      <LineId Id="159" Count="0" />
      <LineId Id="154" Count="0" />
      <LineId Id="146" Count="0" />
      <LineId Id="148" Count="0" />
      <LineId Id="150" Count="0" />
      <LineId Id="160" Count="0" />
      <LineId Id="153" Count="0" />
      <LineId Id="152" Count="0" />
      <LineId Id="155" Count="1" />
      <LineId Id="161" Count="0" />
      <LineId Id="149" Count="0" />
      <LineId Id="170" Count="0" />
      <LineId Id="169" Count="0" />
      <LineId Id="172" Count="0" />
      <LineId Id="171" Count="0" />
      <LineId Id="173" Count="0" />
      <LineId Id="191" Count="0" />
      <LineId Id="190" Count="0" />
      <LineId Id="193" Count="0" />
      <LineId Id="192" Count="0" />
      <LineId Id="194" Count="0" />
      <LineId Id="197" Count="0" />
      <LineId Id="199" Count="1" />
      <LineId Id="198" Count="0" />
      <LineId Id="195" Count="0" />
      <LineId Id="151" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>